add header desktop

--- a/src/components/header/_header.pug
+++ b/src/components/header/_header.pug
@@ -3,24 +3,28 @@ header.header
   .container
     .header__wrapper
       a(href="homepage.html").header__logo
-        +svgMono('email')
+        +svgMono('logo')
       ul.header__menu
         li
-          a(href="homepage.html") Homepage
+          a(href="#") История
         li
-          a(href="page.html") Shop
+          a(href="#") Производство
         li
-          a(href="page.html") Lorem
-      
-      .header__cta
-        .header__cart
-          +svgMono('email')
-      
+          a(href="#") Полимербыт сегодня
+        li
+          a(href="#") Работа с нами
+        li
+          a(href="#") Контрактное производство
+        li
+          a(href="#") Документы
+        li
+          a(href="#") Контакты
+
       .header__hamburger
         .hamburger.hamburger--squeeze(js-hamburger)
           .hamburger-box
             .hamburger-inner
-    
+
 // MOBILE NAVI
 .mobile-navi
   .mobile-navi__wrapper
