--- a/src/components/header/_header.sass
+++ b/src/components/header/_header.sass
@@ -5,41 +5,69 @@
   right: 0
   left: 0
   z-index: 9
-  background: #f5f5f5
+  background: transparent
   will-change: transform
   backface-visibility: hidden
   transform-style: preserve-3d
   &__wrapper
     display: flex
     align-items: center
-    height: 70px
+    color: $fontColor
+    padding: 32px 0 15px
 
   &__logo
     flex: 0 0 auto
-    font-size: 35px
     padding-right: 30px
+    font-size: 0
+    transition: opacity .25s $ease
+    .ico
+      font-size: 48px
+    &:hover
+      opacity: 0.8
 
   &__menu
     flex: 0 1 auto
     display: flex
     align-items: center
-    font-size: 18px
-    margin: 0 auto
+    font-size: 13px
+    line-height: 1.3
+    text-transform: uppercase
+    margin: 0 0 0 auto
     padding: 0
     li
       display: inline-block
-      margin-right: 30px
+      margin-right: 10px
+      &:last-child
+        margin-right: 0
+      &.is-active
+        color: $colorPrimary
+        &::after
+          right: 7px
     a
+      position: relative
+      display: inline-block
+      padding: 7px
       transition: color .25s $ease
       &:hover
-        color: tomato
+        color: $colorPrimary
+      &:after
+        display: inline-block
+        content: ' '
+        position: absolute
+        bottom: 3px
+        left: 7px
+        right: 101%
+        height: 2px
+        background: $colorPrimary
+        transition: right .25s $ease
+      &:hover
+        &::after
+          right: 7px
 
-  &__cta
-    margin-left: auto
-    padding-left: 30px
+
 
   &__hamburger
-    // display: none
+    display: none
     padding-left: 20px
 
   &.is-fixed
