--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -1,8 +1,7 @@
 ---
-title: Homepage title
+title: Главная
 outClass: homepage
 ---
 extends shared/_layout
 block content
 
-  include ../components/test/_test.pug
