--- a/src/sass/layout/_font.sass
+++ b/src/sass/layout/_font.sass
@@ -1,2 +1,2 @@
 // FONTS
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&subset=cyrillic')
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic')
