--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -53,7 +53,8 @@ body, html
     padding-top: 150px
 
 .container
-  max-width: 1200px
+  // 1140px
+  max-width: 1220px
   width: 100%
   margin-left: auto
   margin-right: auto
