--- a/src/sass/utilities/_variables.sass
+++ b/src/sass/utilities/_variables.sass
@@ -7,13 +7,13 @@ $xl: 1200
 $hd: 1440
 
 // FONTS
-$baseFont: "Helvetica"
+$baseFont: 'PT Sans', sans-serif
 $systemFont: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica', 'Ubuntu', 'Cantarell', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'
 
 // COLORS
-$fontColor: #333
+$fontColor: #202020
 $fontColor50: rgba($fontColor, .5)
-$colorPrimary: #FBBF1B
+$colorPrimary: #A01E25
 $colorGreen: #4ab68f
 $colorRed: #f45b63
 $colorRedHover: lighten($colorRed, 15%)
