--- a/src/components/header/_header.sass
+++ b/src/components/header/_header.sass
@@ -19,6 +19,7 @@
     flex: 0 0 auto
     padding-right: 30px
     font-size: 0
+    color: $colorPrimary
     transition: opacity .25s $ease
     .ico
       font-size: 48px
