--- a/src/sass/utilities/_variables.sass
+++ b/src/sass/utilities/_variables.sass
@@ -17,7 +17,7 @@ $colorPrimary: #A01E25
 $colorGreen: #4ab68f
 $colorRed: #f45b63
 $colorRedHover: lighten($colorRed, 15%)
-$borderColor: #e8e8e8
+$borderColor: #F2F2F2
 $colorBg: #E5E5E5
 
 // OPTIONS
