add mobile navi tablet

--- a/src/components/header/_header.pug
+++ b/src/components/header/_header.pug
@@ -30,10 +30,16 @@ header.header
   .mobile-navi__wrapper
     ul.mobile-navi__menu
       li
-        a(href="homepage.html") Homepage
+        a(href="#") История
       li
-        a(href="page.html") Shop
+        a(href="#") Производство
       li
-        a(href="page.html") Lorem
-    .mobile-navi__cta
-      a(href="mailto:sergey@khmelevskoy.co") sergey@khmelevskoy.co
+        a(href="#") Полимербыт сегодня
+      li
+        a(href="#") Работа с нами
+      li
+        a(href="#") Контрактное производство
+      li
+        a(href="#") Документы
+      li
+        a(href="#") Контакты
