--- a/src/components/header/_mobile-navi.sass
+++ b/src/components/header/_mobile-navi.sass
@@ -2,44 +2,51 @@
   display: none
   position: fixed 0
   z-index: 8
-  background: $colorBg
-  // display: flex
   flex-direction: column
   pointer-events: none
-  transform: translate3d(0,-100%,0)
-  transition: transform .3s $ease
+  opacity: 0
+  background: rgba($fontColor, .4)
+  transition: opacity .25s $ease
   &__wrapper
     flex: 1 1 auto
     display: flex
     flex-direction: column
-    padding: 50px 25px 20px
+    overflow-y: auto
+    max-width: 440px
+    margin-left: auto
+    background: white
+    transform: translate3d(100%,0%,0)
+    padding: 75px 55px 40px
+    will-change: transform
+    backface-visibility: hidden
+    transform-style: preserve-3d
+    transition: transform .25s $ease
   &__menu
     margin-top: auto
     padding: 20px 0
     list-style: none
-    text-align: center
     li
       display: block
-      font-size: 36px
-      margin-bottom: 30px
+      font-size: 18px
+      line-height: 23px
+      margin-bottom: 20px
+      text-transform: uppercase
       &:last-child
         margin-bottom: 0
     a
+      display: inline-block
+      padding: 5px
       transition: .25s $ease
       &:hover
-        color: $fontColor50
-  &__cta
-    text-align: center
-    margin-top: auto
-    a
-      transition: .25s $ease
-      &:hover
-        color: $fontColor50
+        color: $colorPrimary
 
   &.is-active
     pointer-events: all
-    transform: translate3d(0,0,0)
+    opacity: 1
+    .mobile-navi
+      &__wrapper
+        transform: translate3d(0,0,0)
 
-+r($md)
++r($lg)
   .mobile-navi
     display: flex
