--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -1,7 +1,10 @@
 ---
 title: Главная
-outClass: homepage
 ---
 extends shared/_layout
 block content
 
+  // header modifier class
+  div(js-header-class data-class="no-logo")
+
+  include ../components/homepage/_homepage
