catalog separator draft

--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -8,3 +8,4 @@ block content
   div(js-header-class data-class="no-logo")
 
   include ../components/homepage/_homepage
+  include ../components/separator/_catalog
