--- a/src/components/homepage/_homepage.pug
+++ b/src/components/homepage/_homepage.pug
@@ -2,11 +2,11 @@
 .homepage
   .container
     .homepage__wrapper
-      .homepage__left
+      .homepage__left(data-aos="fade-up")
         .homepage__logo
           +svgMono('logo')
         .homepage__content
-          .homepage__title Ведущий российский производитель бытовых изделий из&nbsp;пластика с&nbsp;80-летней <a href="history.html">историей</a> и&nbsp;современным <a href="production.html">производством</a>.
-          .homepage__description Почти в&nbsp;каждом российском доме можно встретить нашу продукцию. Проверьте.
-      .homepage__right
+        .homepage__title Ведущий российский производитель бытовых изделий из&nbsp;пластика с&nbsp;80-летней <a href="history.html">историей</a> и&nbsp;современным <a href="production.html">производством</a>.
+        .homepage__description Почти в&nbsp;каждом российском доме можно встретить нашу продукцию. Проверьте.
+      .homepage__right(data-aos="fade-up")
         span news
