--- a/src/components/separator/_catalog.pug
+++ b/src/components/separator/_catalog.pug
@@ -1,5 +1,5 @@
 // SEPARATOR CATALOG
-a(href="#").separator
+a(href="#" data-aos="fade-up").separator
   .container
     .separator__wrapper
       .separator__image
