brands section desktop

--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -9,3 +9,4 @@ block content
 
   include ../components/homepage/_homepage
   include ../components/separator/_catalog
+  include ../components/brands/_brands
