add rest of the pages

--- a/src/components/header/_header.sass
+++ b/src/components/header/_header.sass
@@ -93,6 +93,13 @@
         opacity: 0
         transform: translateY(-20px)
         pointer-events: none
+  &[data-modifier="is-white"]
+    .header
+      &__logo
+        color: white
+      &__wrapper
+        color: white
+
 
 +r($xl)
   .header
