add home news block

--- a/src/components/homepage/_homepage.pug
+++ b/src/components/homepage/_homepage.pug
@@ -9,4 +9,8 @@
           .homepage__title Ведущий российский производитель бытовых изделий из&nbsp;пластика с&nbsp;80-летней <a href="history.html">историей</a> и&nbsp;современным <a href="production.html">производством</a>.
           .homepage__description Почти в&nbsp;каждом российском доме можно встретить нашу продукцию. Проверьте.
       .homepage__right(data-aos="fade-up")
-        span news
+        .h-news
+          a(href="#").h-news-card
+            .h-news-card__title Новости
+            .h-news-card__description Осень не за горами – Полимербыт представляет эффективные решения для школьников
+            .h-news-card__date 25.05.2019
