--- a/src/components/homepage/_homepage.sass
+++ b/src/components/homepage/_homepage.sass
@@ -52,3 +52,31 @@
     font-size: 20px
     line-height: 26px
     color: #4F4F4F
+
+// homepage news
+.h-news
+  margin-top: 75px
+
+.h-news-card
+  position: relative
+  display: block
+  background: #FFFFFF
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.08)
+  border-radius: 8px
+  padding: 24px
+  transition: box-shadow .25s $ease
+  &__title
+    font-weight: 700
+    font-size: 20px
+    line-height: 1.3
+  &__description
+    margin: 1em 0
+    font-size: 16px
+    line-height: 1.3
+    color: #4F4F4F
+  &__date
+    font-size: 12px
+    line-height: 1.3
+    color: #828282
+  &:hover
+    box-shadow: none
