--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -14,7 +14,7 @@ ul
     display: inline-block
 
 body, html
-  background: white
+  background: #F9F9F9
   color: $fontColor
   font-family: $baseFont
   // font-family: "Helvetica", -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica', 'Ubuntu', 'Cantarell', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'
