header, footer, homepage

--- a/src/components/footer/_footer.pug
+++ b/src/components/footer/_footer.pug
@@ -1,6 +1,6 @@
 // FOOTER :: START
 footer.footer
-  .container
+  .container.container--full
     .footer__wrapper
       // left
       .footer__left
