--- a/src/components/separator/_separator.sass
+++ b/src/components/separator/_separator.sass
@@ -26,3 +26,24 @@
     .separator
       &__image
         transform: translateY(-10px)
+
++r($lg)
+  .separator
+    &__title
+      font-size: 16px
+      line-height: 21px
+      padding: 17px 0 17px 175px
+    &__image
+      img
+        height: 125px
+
++r($md)
+  .separator
+    &__title
+      font-size: 14px
+      line-height: 18px
+      padding: 13px 0 13px 120px
+    &__image
+      img
+        height: 90px
+        margin-left: -7px
