--- a/src/sass/elements/_buttons.sass
+++ b/src/sass/elements/_buttons.sass
@@ -33,3 +33,17 @@ button
       transform: scale(1.05) translateY(-5px)
       background: rgba($colorPrimary, .9)
       box-shadow: 0 15px 10px -15px rgba($fontColor, .4)
+
+  &-primary
+    width: auto
+    border-radius: 40px
+    background: $colorPrimary
+    font-size: 12px
+    line-height: 16px
+    padding: 8px 14px
+    color: white
+    transition: .25s $ease
+    transform-origin: center bottom
+    box-shadow: none
+    &:hover
+      background: rgba($colorPrimary, .9)
