--- a/src/components/brands/_brands.sass
+++ b/src/components/brands/_brands.sass
@@ -1,6 +1,6 @@
 // BRANDS
 .brands
-  padding: 70px 0 90px
+  padding: 70px 0 175px
   &__title
     // TODO - possibly typography class
     font-weight: bold
@@ -21,6 +21,8 @@
     max-width: $col6
     display: flex
     flex-direction: column
+  .btn
+    display: none
 
 // brand card
 .brand-card
@@ -37,7 +39,74 @@
       max-width: 100%
   &__description
     margin-top: auto
-    font-size: 16px
-    line-height: 1.5
+    font-size: 18px
+    line-height: 1.55
     text-align: center
     color: #4F4F4F
+
++r($hd)
+  .brands
+    padding: 70px 0 105px
+  // brand card
+  .brand-card
+    &__image
+      padding-bottom: 30px
+    &__description
+      font-size: 16px
+
++r($xl)
+  .brands
+    padding: 50px 0 75px
+    &__title
+      font-size: 24px
+      margin-bottom: 0px
+    &__wrapper
+      justify-content: space-around
+    &__col
+      flex: 0 0 42%
+      max-width: 42%
+      // margin: 0 auto
+    .btn
+      display: inline-block
+      max-width: 115px
+      margin: 15px auto 0
+
+  .brand-card
+    &__image
+      padding-bottom: 12px
+      img
+        height: 75px
+
++r($lg)
+  .brands
+    padding-bottom: 70px
+    &__title
+      font-size: 20px
+      line-height: 26px
+      margin-bottom: 5px
+
+  .brand-card
+    &__description
+      font-size: 14px
+      line-height: 20px
+
+
++r($md)
+  .brands
+    padding-bottom: 40px
+    &__title
+      font-weight: 400
+      text-align: left
+      margin-bottom: 15px
+    &__col
+      flex: 0 0 50%
+      max-width: 50%
+    .btn
+      margin: 15px auto 0 0
+
+  .brand-card
+    text-align: left
+    &__description
+      font-size: 11px
+      line-height: 16px
+      text-align: left
