--- a/src/components/footer/_footer.sass
+++ b/src/components/footer/_footer.sass
@@ -10,16 +10,16 @@
     min-height: 0px
 
   &__left
-    flex: 0 0 330px
-    max-width: 330px
-    padding: 40px 0 48px
+    flex: 0 0 365px
+    max-width: 365px
+    padding: 65px 0 48px
 
   &__right
     flex: 1 1 auto
     max-width: 100%
     border-left: 1px solid $borderColor
     // minus 5px pl for menu a
-    padding: 50px 0 50px 35px
+    padding: 70px 0 50px 35px
     display: flex
     align-items: flex-start
 
@@ -38,8 +38,8 @@
     color: #BDBDBD
   &__address-content
     margin: 4px 0
-    font-size: 14px
-    line-height: 18px
+    font-size: 16px
+    line-height: 21px
     color: #4F4F4F
 
   &__developer
@@ -68,7 +68,7 @@
     a
       display: inline-block
       padding: 5px
-      font-size: 13px
+      font-size: 15px
       line-height: 1.3
       text-transform: uppercase
       transition: color .25s $ease
@@ -86,7 +86,7 @@
 
 /* nav link
 .nav-link
-  min-width: 175px
+  min-width: 235px
   display: flex
   align-items: center
   padding: 16px 12px 16px 16px
@@ -132,3 +132,118 @@
     .nav-link
       &__icon
         color: $colorGreen
+
++r($hd)
+  .footer
+    &__left
+      flex: 0 0 330px
+      max-width: 330px
+      padding: 40px 0 48px
+
+    &__right
+      padding: 50px 0 50px 35px
+
+    &__address-content
+      font-size: 14px
+      line-height: 18px
+
+    &__menu
+      li
+        a
+          font-size: 13px
+
+  .nav-link
+    min-width: 175px
+
++r($xl)
+  .footer
+    &__nav
+      flex-direction: column
+      margin-top: -12px
+    &__right
+      padding: 50px 0 30px 25px
+    &__left
+      padding: 37px 0 30px 30px
+      flex: 0 0 290px
+      max-width: 290px
+    &__address-content
+      font-size: 12px
+      line-height: 16px
+
+  .nav-link
+    width: 100%
+    margin: 0 0 4px 0
+
++r($lg)
+  .footer
+    &__logo
+      display: none
+    &__left
+      padding-left: 0
+      padding: 40px 0 20px
+      margin-left: -8px
+      flex: 0 0 190px
+      max-width: 190px
+    &__right
+      border-left: none
+      padding: 35px 0 20px 20px
+    &__address
+      margin: 0 0 15px
+    &__address-content
+      font-size: 14px
+      line-height: 18px
+    &__developer
+      a
+        font-size: 12px
+    &__menu
+      a
+        font-size: 12px
+        line-height: 16px
+
+
+  .nav-link
+    padding: 12px
+    min-width: 140px
+    &__title
+      font-size: 11px
+      line-height: 20px
+    &__name
+      font-size: 14px
+      line-height: 20px
+
++r($md)
+  .footer
+    &__wrapper
+      flex-direction: column-reverse
+    &__right
+      flex-direction: column
+      padding: 34px 0 0
+    &__left
+      margin: 0
+      padding: 32px 0
+      flex: 0 0 100%
+      max-width: 100%
+    &__address
+      margin-bottom: 23px
+    &__developer
+      a
+        font-size: 13px
+    &__menu
+      margin-right: 0
+      li
+        flex: 0 0 100%
+        max-width: 100%
+        margin-bottom: 8px
+        a
+          width: 100%
+          text-align: center
+    &__nav
+      width: 100%
+      flex-direction: row
+      margin: 27px -4px 0
+
+
+  .nav-link
+    flex: 0 0 48%
+    max-width: 48%
+    margin: 0 4px
