--- a/src/components/homepage/_homepage.pug
+++ b/src/components/homepage/_homepage.pug
@@ -1,13 +1,13 @@
 // HOMEPAGE
 .homepage
-  .container
+  .container.container--full
     .homepage__wrapper
       .homepage__left(data-aos="fade-up")
         .homepage__logo
           +svgMono('logo')
         .homepage__content
           .homepage__title Ведущий российский производитель бытовых изделий из&nbsp;пластика с&nbsp;80-летней <a href="history.html">историей</a> и&nbsp;современным <a href="production.html">производством</a>.
-          .homepage__description Почти в&nbsp;каждом российском доме можно встретить нашу продукцию. Проверьте.
+          .homepage__description Трудно отыскать хотя бы одну современную семью, которая не пользовалась бы нашей продукцией.
       .homepage__right(data-aos="fade-up")
         .h-news
           a(href="#").h-news-card
@@ -22,6 +22,15 @@
           .product
             .product__image
               img(src='img/productImg_1.png' srcset='img/productImg_1@2x.png 2x')
+            .product__content
+              .product__plus
+                +svgMono('plus')
+              .product__dropdown
+                .product__dropdown-wrapper
+                  .product__article Артикул: 35601
+                  .product__dropdown-image
+                    img(src='img/productDrop_1.png' srcset='img/productDrop_1@2x.png 2x')
+                  .product__title Миска с крышкой 2л
 
         .products__col
           .product
@@ -38,5 +47,60 @@
                   .product__title Миска с крышкой 2л
 
         .products__col.products__col--2
+          .product
+            .product__icon
+              //- +svgMono('home-eco')
+              img(src='img/home-eco.png' srcset='img/home-eco@2x.png 2x')
+            .product__info
+              p Вся продукция изготавливается из
+                span  передовых экологичных видов сырья
+                |  и не содержит Бисфенол А
+
+        .products__col.products__col--4.products__col--mt-
+          .product
+            .product__image
+              img(src='img/productImg_3.png' srcset='img/productImg_3@2x.png 2x')
+            .product__content
+              .product__plus
+                +svgMono('plus')
+              .product__dropdown.product__dropdown--reverse
+                .product__dropdown-wrapper
+                  .product__article Артикул: 35601
+                  .product__dropdown-image
+                    img(src='img/productDrop_1.png' srcset='img/productDrop_1@2x.png 2x')
+                  .product__title Миска с крышкой 2л
+
+
+
+        .products__col.products__col--4.products__col--editable
+          .product
+            .product__icon
+              //- +svgMono('home-tech')
+              img(src='img/home-tech.png' srcset='img/home-tech@2x.png 2x')
+            .product__info
+              p На предприятии внедрены самые современные технологии, в том числе
+                span  двухкомпонентного литья и нанесения декора по методу In-Mold Labeling.
 
         .products__col.products__col--4
+          .product
+            .product__image
+              img(src='img/productImg_4.png' srcset='img/productImg_4@2x.png 2x')
+            .product__content
+              .product__plus
+                +svgMono('plus')
+              .product__dropdown
+                .product__dropdown-wrapper
+                  .product__article Артикул: 35601
+                  .product__dropdown-image
+                    img(src='img/productDrop_1.png' srcset='img/productDrop_1@2x.png 2x')
+                  .product__title Миска с крышкой 2л
+
+        .products__col.products__col--4.products__col--editable
+          .product
+            .product__icon
+              +svgMono('home-design')
+              //- img(src='img/home-design.png' srcset='img/home-design@2x.png 2x')
+            .product__info
+              p
+                span Собственный блок промышленного дизайна
+                |  обеспечивает развитие ассортимента компании изделиями мирового уровня дизайна и качества.
