--- a/src/components/homepage/_homepage.sass
+++ b/src/components/homepage/_homepage.sass
@@ -1,6 +1,6 @@
 // homepage
 .homepage
-  padding: 120px 0
+  padding: 135px 0 0
   &__wrapper
     display: flex
     margin: 0 -10px
@@ -13,25 +13,28 @@
     flex: 1 1 auto
     max-width: 100%
   &__right
-    flex: 0 0 290px
-    max-width: 290px
+    flex: 0 0 380px
+    max-width: 380px
+    position: relative
+    z-index: 2
 
   &__logo
     color: $colorPrimary
     font-size: 0
     .ico
-      font-size: 144px
+      font-size: 192px
 
   &__content
-    margin-left: 170px
+    margin-left: 220px
   &__title
-    font-size: 30px
-    line-height: 1.3
+    font-size: 36px
+    line-height: 1.35
     a
       display: inline-block
       position: relative
       color: $colorPrimary
       transition: color .25s $ease
+      font-weight: 600
       &::after
         display: inline-block
         content: ' '
@@ -49,16 +52,17 @@
 
   &__description
     margin-top: 1em
-    font-size: 20px
-    line-height: 26px
+    font-size: 24px
+    line-height: 31px
     color: #4F4F4F
+    max-width: 580px
 
   &__products
-    margin: 16px 0
+    margin: 16px 0 0
 
 // homepage news
 .h-news
-  margin-top: 75px
+  margin-top: 105px
 
 .h-news-card
   position: relative
@@ -73,13 +77,139 @@
     font-size: 20px
     line-height: 1.3
   &__description
-    margin: 1em 0
-    font-size: 16px
-    line-height: 1.3
+    margin: 1em 0 0
+    font-size: 18px
+    line-height: 1.5
     color: #4F4F4F
   &__date
     font-size: 12px
     line-height: 1.3
     color: #828282
+    margin-top: 1em
   &:hover
     box-shadow: none
+
++r($hd)
+  .homepage
+    padding: 120px 0 0
+
+    &__right
+      flex: 0 0 290px
+      max-width: 290px
+
+    &__logo
+      .ico
+        font-size: 144px
+
+    &__content
+      margin-left: 175px
+    &__title
+      font-size: 30px
+
+    &__description
+      font-size: 20px
+      line-height: 26px
+
+    &__products
+      margin: 16px 0 0
+
+  // homepage news
+  .h-news
+    margin-top: 75px
+
+  .h-news-card
+    &__description
+      margin: 1em 0
+      font-size: 16px
+      line-height: 1.3
+
++r($xl)
+  .homepage
+    &__logo
+      .ico
+        font-size: 125px
+
+    &__content
+      margin-left: 150px
+      margin-top: 15px
+
+    &__title
+      font-size: 24px
+      line-height: 31px
+
+    &__description
+      font-size: 16px
+      line-height: 21px
+      margin-top: 25px
+
+    &__products
+      margin: 20px 0 110px
+
+  .h-news
+    margin-top: 48px
+
+  .h-news-card
+    padding: 16px
+    &__title
+      font-size: 18px
+      line-height: 23px
+    &__description
+      margin: 8px 0 0
+      font-size: 14px
+      line-height: 18px
+    &__date
+      margin-top: 16px
+
++r($lg)
+  .homepage
+    padding: 80px 0
+    &__logo
+      .ico
+        font-size: 96px
+
+    &__content
+      margin-left: 0
+      margin-top: 25px
+
+    &__title
+      font-size: 20px
+      line-height: 26px
+
+    &__description
+      margin-top: 15px
+
+    &__right
+      flex: 0 0 250px
+      max-width: 250px
+
+    &__products
+      margin: 35px 0 30px
+
+  .h-news
+    margin-top: 35px
+
+  .h-news-card
+    &__date
+      margin-top: 10px
+
+
++r($md)
+  .homepage
+    padding: 80px 0 20px
+    &__logo
+      .ico
+        font-size: 64px
+    &__wrapper
+      flex-direction: column
+    &__content
+      margin-top: 33px
+    &__title
+      font-size: 18px
+      line-height: 23px
+    &__description
+      font-size: 15px
+      line-height: 19px
+    &__right
+      flex: 0 0 100%
+      max-width: 100%
+
