--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -9,7 +9,7 @@
 @import swiper/src/swiper
 @import magnific-popup/src/css/main
 @import vendor/selectric
-@import vendor/aos/aos
+// @import vendor/aos/aos
 @import vendor/hamburgers
 
 @import layout/font
