--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -58,11 +58,23 @@ body, html
   margin-right: auto
   padding-left: 40px
   padding-right: 40px
+  &--full
+    max-width: 1600px
+
++r($hd)
+  .container
+    &--full
+      max-width: 1220px
+
++r($lg)
+  .container
+    padding-left: 24px
+    padding-right: 24px
 
 +r($sm)
   .container
-    padding-left: 20px
-    padding-right: 20px
+    padding-left: 16px
+    padding-right: 16px
 
 // REMOVE FOR PRODUCTION !
 .dev-bp-debug
