--- a/src/sass/utilities/_variables.sass
+++ b/src/sass/utilities/_variables.sass
@@ -1,9 +1,10 @@
 // LAYOUT
 $mobile-s: 375
 $sm: 576
-$md: 768
-$lg: 1024
+$md: 767
+$lg: 1023
 $xl: 1200
+$hd: 1640
 
 // FONTS
 $baseFont: 'PT Sans', sans-serif
