--- a/src/pug/polimer-today.pug
+++ b/src/pug/polimer-today.pug
@@ -4,3 +4,7 @@ title: Сегодня на карте
 extends shared/_layout
 block content
 
+  // header modifier class
+  // div(js-header-class data-class="")
+
+  include ../components/today/_today
