--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -60,11 +60,20 @@ body, html
   padding-right: 40px
   &--full
     max-width: 1600px
+  &--team
+    max-width: 1344px
 
 +r($hd)
   .container
     &--full
       max-width: 1220px
+    &--team
+      max-width: 1028px
+
++r($xl)
+  .container
+    &--team
+      max-width: 870px
 
 +r($lg)
   .container
