--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -62,6 +62,8 @@ body, html
     max-width: 1600px
   &--team
     max-width: 1344px
+  &--article
+    max-width: 940px
 
 +r($hd)
   .container
@@ -69,6 +71,8 @@ body, html
       max-width: 1220px
     &--team
       max-width: 1028px
+    &--article
+    max-width: 835px
 
 +r($xl)
   .container
