--- a/src/components/article/_article.sass
+++ b/src/components/article/_article.sass
@@ -1,17 +1,5 @@
 .article
-  padding: 197px 0 100px
-  &__pre-title
-    font-size: 18px
-    line-height: 23px
-    text-align: center
-    color: rgba(#828282, 0.6)
-    margin: 0 auto
-  &__title
-    font-size: 35px
-    line-height: 47px
-    text-align: center
-    margin: 16px auto
-    max-width: 1000px
+  padding-bottom: 100px
 
   &__image
     font-size: 0
@@ -39,10 +27,6 @@
 
 +r($hd)
   .article
-    padding: 152px 0 100px
-    &__title
-      font-size: 30px
-      line-height: 39px
     &__content
       p
         font-size: 16px
@@ -52,34 +36,13 @@
           font-size: 20px
           line-height: 26px
 
-+r($xl)
-  .article
-    padding: 145px 0 100px
-    &__pre-title
-      font-size: 16px
-      line-height: 21px
-    &__title
-      font-size: 28px
-      line-height: 36px
-
 +r($lg)
   .article
-    padding: 95px 0 60px
-    &__title
-      font-size: 20px
-      line-height: 26px
+    padding-bottom: 60px
 
 +r($md)
   .article
-    padding: 90px 0 80px
-    &__pre-title
-      text-align: left
-      font-size: 14px
-      line-height: 18px
-    &__title
-      font-size: 18px
-      line-height: 23px
-      text-align: left
+    padding-bottom: 80px
     &__content
       p
         font-size: 14px
