--- a/src/components/article/_article.pug
+++ b/src/components/article/_article.pug
@@ -1,7 +1,8 @@
 article.article
   .container.container--article
-    p.article__pre-title 15 августа 2019
-    p.article__title Осень не за горами – Полимербыт представляет эффективные решения для школьников
+
+    include ../page-head/_article
+
     .article__image
       img(src='img/articleImg.jpg' srcset='img/articleImg@2x.jpg 2x')
     .article__content
