--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -41,49 +41,41 @@
     top: 0
     left: 0
     &:checked
-      + label
-        &::before
-          border-color: $colorGreen
+      + span
+        background: $colorPrimary
         &::after
-          transform: translateY(-50%) scale(1)
+          transform: translateY(-50%) scale(1) rotate(-45deg)
   label
     display: block
     width: 100%
     position: relative
     cursor: pointer
-    &::before
-      position: absolute
-      left: 0
-      top: 50%
-      transform: translateY(-50%)
-      display: inline-block
-      content: ' '
-      size: 20px
-      background-color: white
-      border: 1px solid #AFB7C0
-      border-radius: 4px
-      cursor: pointer
-      vertical-align: middle
-      cursor: pointer
-      transition: all $transitionSpeed ease-in-out
+    padding-left: 38px
+    font-size: 14px
+    line-height: 19px
+  span
+    position: absolute
+    left: 0
+    top: 50%
+    transform: translateY(-50%)
+    display: inline-block
+    size: 22px
+    background: #E0E0E0
+    border-radius: 3px
+    cursor: pointer
+    vertical-align: middle
+    cursor: pointer
+    transition: all .25s $ease
     &::after
       position: absolute
-      left: 6px
-      top: 50%
-      transform: translateY(-50%) scale(0)
+      left: 7px
+      top: 48%
+      transform: translateY(-50%) scale(0) rotate(-45deg)
       display: inline-block
       content: ' '
-      size: 10px
-      background: $colorGreen
-      border-radius: 50%
-      // background-image: svg-load('../../images/svg/checkbox.svg')
-      // background-repeat: no-repeat
-      // background-position: center
-      transition: transform .2s ease
-    span
-      display: inline-block
-      padding-left: 35px
-      vertical-align: top
-      line-height: 1.3
-      font-size: 14px
-      cursor: pointer
+      width: 7px
+      height: 4px
+      border: 2px solid #fff
+      border-right: none
+      border-top: 0
+      transition: all .25s $ease
