add cooperation map

--- a/src/components/brands/_brands.sass
+++ b/src/components/brands/_brands.sass
@@ -1,6 +1,7 @@
 // BRANDS
 .brands
   padding: 70px 0 175px
+  background: #fff
   &__title
     // TODO - possibly typography class
     font-weight: bold
