--- a/src/pug/cooperation.pug
+++ b/src/pug/cooperation.pug
@@ -8,3 +8,4 @@ block content
   div(js-header-class data-class="is-white")
 
   include ../components/hero/_cooperation
+  include ../components/cooperation/_map
