--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -11,6 +11,7 @@
 @import vendor/selectric
 // @import vendor/aos/aos
 @import vendor/hamburgers
+@import tooltipster/dist/css/tooltipster.main
 
 @import layout/font
 @import layout/general
