--- a/src/components/contacts/_contacts.pug
+++ b/src/components/contacts/_contacts.pug
@@ -22,7 +22,7 @@
                 +svgColor('icon-mail')
               a(href="mailto:info@polimerbyt.ru") info@polimerbyt.ru
         .contacts__map
-          .js-ymap
+          .js-ymap(data-center="55.733001, 37.754790" data-placeholder="55.733001, 37.754790" data-zoom="13" data-placeholder-caption="Офис" data-placeholder-balloon="109202, г. Москва. 2-я Карачаровская ул., д. 3")
       .contacts__right
         p.contacts__title Кого вы представляете?
         .contacts__right-content
