add cooperation page

--- a/src/components/cooperation/_map.pug
+++ b/src/components/cooperation/_map.pug
@@ -1,7 +1,7 @@
-.cooperation
-  .container.container--full
-    .cooperation__map
-      #s_sheme__tooltip-1.map__tooltip
+.cooperation-map
+  .container.container--team
+    .cooperation-map__map
+      .map__tooltip#s_sheme__tooltip-1
         .map__tooltip-title Москва
         .map__tooltip-row
           .map__tooltip-image
