--- a/src/components/hero/_cooperation.pug
+++ b/src/components/hero/_cooperation.pug
@@ -3,6 +3,6 @@
   .hero__background(data-aos="blur")
     img(src='img/heroBackground_1.jpg' srcset='img/heroBackground_1@2x.jpg 2x')
   .hero__content(data-aos="fade-up")
-    .container
+    .container.container--team
       .hero__subtitle Работа с нами
       .hero__title <strong>Полимербыт</strong> является главным игроком на российском рынке бытовых изделий из пластмасс.
