--- a/src/components/hero/_hero.sass
+++ b/src/components/hero/_hero.sass
@@ -18,7 +18,7 @@
     position: relative
     z-index: 2
     min-height: 100vh
-    padding: 80px 120px
+    padding: 197px 0 96px
     color: white
     display: flex
     flex-direction: column
@@ -30,6 +30,51 @@
     color: rgba(white, .6)
     margin-bottom: 1em
   &__title
-    max-width: 650px
-    font-size: 30px
-    line-height: 1.3
+    max-width: 600px
+    font-size: 36px
+    line-height: 47px
+
+
++r($hd)
+  .hero
+    &__content
+      min-height: 656px
+      padding: 152px 0 80px
+    &__title
+      font-size: 30px
+      line-height: 39px
+      max-width: 550px
+
++r($xl)
+  .hero
+    &__content
+      min-height: 426px
+      padding: 145px 0 45px
+    &__subtitle
+      font-size: 16px
+      line-height: 21px
+    &__title
+      font-size: 28px
+      line-height: 36px
+      max-width: 520px
+
++r($lg)
+  .hero
+    &__content
+      min-height: 319px
+      padding: 95px 0 40px
+    &__title
+      font-size: 20px
+      line-height: 26px
+      max-width: 390px
+
++r($md)
+  .hero
+    &__content
+      padding: 90px 0 32px
+    &__subtitle
+      font-size: 14px
+      line-height: 18px
+    &__title
+      font-size: 18px
+      line-height: 23px
