--- a/src/pug/cooperation.pug
+++ b/src/pug/cooperation.pug
@@ -8,4 +8,6 @@ block content
   div(js-header-class data-class="is-white")
 
   include ../components/hero/_cooperation
+  include ../components/cooperation/_info
+  include ../components/cooperation/_popups
   include ../components/cooperation/_map
