--- a/src/components/hero/_hero.sass
+++ b/src/components/hero/_hero.sass
@@ -8,11 +8,33 @@
     z-index: 1
     display: flex
     flex-direction: column
-    img
+    font-size: 0
+    img, picture, video
+      position: relative
+      z-index: 1
       flex: 1 1 auto
       width: 100%
       height: 100%
       object-fit: cover
+  &--with-overlay
+    .hero__background
+      &::before
+        display: inline-block
+        content: ' '
+        position: absolute 0
+        z-index: 2
+        background: rgba($fontColor, .3)
+      &::after
+        display: inline-block
+        content: ' '
+        position: absolute
+        top: 0
+        left: 0
+        right: 0
+        height: 50%
+        z-index: 2
+        background: linear-gradient(180deg, #202020 0%, rgba(32, 32, 32, 0) 100%)
+        opacity: 0.9
 
   &__content
     position: relative
