--- a/src/components/cooperation/_info.sass
+++ b/src/components/cooperation/_info.sass
@@ -248,6 +248,7 @@
       flex-direction: column
     &__info
       width: 100%
+      max-width: 100%
       &-title
         font-size: 16px
         line-height: 21px
