--- a/src/components/hero/_hero.sass
+++ b/src/components/hero/_hero.sass
@@ -29,10 +29,19 @@
     line-height: 1.27
     color: rgba(white, .6)
     margin-bottom: 1em
+    &--edit
+      font-size: 22px
+      line-height: 28px
   &__title
     max-width: 600px
     font-size: 36px
     line-height: 47px
+    &--edit
+      font-size: 44px
+      line-height: 57px
+      max-width: 690px
+
+
 
 
 +r($hd)
@@ -44,6 +53,9 @@
       font-size: 30px
       line-height: 39px
       max-width: 550px
+    &__subtitle
+      font-size: 18px
+      line-height: 1.27
 
 +r($xl)
   .hero
@@ -67,6 +79,9 @@
       font-size: 20px
       line-height: 26px
       max-width: 390px
+      &--edit
+        font-size: 24px
+        line-height: 31px
 
 +r($md)
   .hero
@@ -78,3 +93,6 @@
     &__title
       font-size: 18px
       line-height: 23px
+      &--edit
+        font-size: 20px
+        line-height: 26px
