--- a/src/pug/production.pug
+++ b/src/pug/production.pug
@@ -8,3 +8,5 @@ block content
   div(js-header-class data-class="is-white")
 
   include ../components/hero/_production
+  include ../components/production/_info
+  include ../components/production/_graph
