--- a/src/components/hero/_production.pug
+++ b/src/components/hero/_production.pug
@@ -3,6 +3,6 @@
   .hero__background(data-aos="blur")
     img(src='img/heroBackground_1.jpg' srcset='img/heroBackground_1@2x.jpg 2x')
   .hero__content(data-aos="fade-up")
-    .container
-      .hero__subtitle Наше производство
-      .hero__title <strong>Качество производства</strong> – залог признания многих поколений наших потребителей.
+    .container.container--team
+      .hero__subtitle.hero__subtitle--edit Наше производство
+      .hero__title.hero__title--edit <strong>Качество производства</strong> – залог признания многих поколений наших потребителей.
