images, cooperation, merge

--- a/src/components/cooperation/_info.pug
+++ b/src/components/cooperation/_info.pug
@@ -12,8 +12,8 @@
           | , состоящем из самых востребованных рынком и потребителями изделий. Основные характеристики ассортимента:
           span  строгий контроль качества, регулярная актуализация внешнего вида изделий для соответствия текущим вкусам потребителей
           | , неснижаемый складской запас для бесперебойных регулярных отгрузок.
-      .cooperation__image
-        img(src='img/cooperationImg1.jpg' srcset='img/cooperationImg1@2x.jpg 2x')
+      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/cooperationImg1.jpg)")
+        img(js-lazy data-src='img/cooperationImg1.jpg' data-srcset='img/cooperationImg1@2x.jpg 2x')
     .cooperation__row.cooperation__row--reverse
       .cooperation__info
         .cooperation__icon
@@ -24,8 +24,8 @@
           |  позволяет достигать необходимого уровня качества продукции и применять полный
           span  набор разнообразных технологий изготовления изделий из пластмассы
           |  (в том числе, двухкомпонентное литье, литье изделий сложной конфигурации, нанесение рисунков на изделия).
-      .cooperation__image
-        img(src='img/cooperationImg2.jpg' srcset='img/cooperationImg2@2x.jpg 2x')
+      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/cooperationImg2.jpg)")
+        img(js-lazy data-src='img/cooperationImg2.jpg' data-srcset='img/cooperationImg2@2x.jpg 2x')
 
 .cooperation__advantages
   .container.container--team
