--- a/src/components/today/_team.sass
+++ b/src/components/today/_team.sass
@@ -20,6 +20,7 @@
         left: 10px
         bottom: 10px
         background: linear-gradient(0deg, #202020 -3.47%, rgba(32, 32, 32, 0) 100%)
+        z-index: 2
       .team__info
         position: absolute
         z-index: 2
@@ -128,6 +129,7 @@
         .team__info
           left: 20px
           bottom: 20px
+          width: calc(100% - 40px)
           p
             &.name
               font-size: 18px
