--- a/src/components/today/_today.pug
+++ b/src/components/today/_today.pug
@@ -38,58 +38,58 @@
       .team
         .team__grid
           .team__col.team__col--2
-            .team__image
-              img(src='img/person1.jpg' srcset='img/person1@2x.jpg 2x')
+            .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person1.jpg)")
+              img(js-lazy data-src='img/person1.jpg' data-srcset='img/person1@2x.jpg 2x')
             .team__info
               p.name Петр Жуков
               p.prof Веб дизайнер
               p.desc Благодаря этим преимуществам Полимербыт неизменно, год за годом увеличивает свою клиентскую базу.
           .team__col.team__col--2
-            .team__image
-              img(src='img/person1.jpg' srcset='img/person1@2x.jpg 2x')
+            .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person1.jpg)")
+              img(js-lazy data-src='img/person1.jpg' data-srcset='img/person1@2x.jpg 2x')
             .team__info
               p.name Петр Жуков
               p.prof Веб дизайнер
               p.desc Благодаря этим преимуществам Полимербыт неизменно, год за годом увеличивает свою клиентскую базу.
           .team__col
-            .team__image
-              img(src='img/person2.jpg' srcset='img/person2@2x.jpg 2x')
+            .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person2.jpg)")
+              img(js-lazy data-src='img/person2.jpg' data-srcset='img/person2@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
           .team__col
-            .team__image
-              img(src='img/person1.jpg' srcset='img/person1@2x.jpg 2x')
+            .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person1.jpg)")
+              img(js-lazy data-src='img/person1.jpg' data-srcset='img/person1@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
           .team__col
-            .team__image
-              img(src='img/person3.jpg' srcset='img/person3@2x.jpg 2x')
+            .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person3.jpg)")
+              img(js-lazy data-src='img/person3.jpg' data-srcset='img/person3@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
           .team__col
-            .team__image
-              img(src='img/person4.jpg' srcset='img/person4@2x.jpg 2x')
+            .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person4.jpg)")
+              img(js-lazy data-src='img/person4.jpg' data-srcset='img/person4@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
           .team__col
-            .team__image
-              img(src='img/person5.jpg' srcset='img/person5@2x.jpg 2x')
+            .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person5.jpg)")
+              img(js-lazy data-src='img/person5.jpg' data-srcset='img/person5@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
           .team__col
-            .team__image
-              img(src='img/person6.jpg' srcset='img/person6@2x.jpg 2x')
+            .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person6.jpg)")
+              img(js-lazy data-src='img/person6.jpg' data-srcset='img/person6@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
           .team__col
-            .team__image
-              img(src='img/person7.jpg' srcset='img/person7@2x.jpg 2x')
+            .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person7.jpg)")
+              img(js-lazy data-src='img/person7.jpg' data-srcset='img/person7@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
