--- a/src/sass/elements/_media.sass
+++ b/src/sass/elements/_media.sass
@@ -1,6 +1,6 @@
 // keep space for preloading images via AR set
 .scaler
-  background-color: $colorBg
+  // background-color: $colorBg
   background-position: center center
   background-repeat: no-repeat
   background-size: cover
