--- a/src/components/today/_today.sass
+++ b/src/components/today/_today.sass
@@ -205,6 +205,7 @@
       margin-top: -5px
       padding-bottom: 22px
       margin: -5px 0 0
+      width: 100%
 
     &__item
       min-width: 100%
